--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -47,7 +47,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/space_mono_regular"
+        android:fontFamily="@font/roboto"
         tools:text="TAGLINE"
         android:textColor="@color/white"
         android:textSize="18sp"
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         tools:text="DATE"
-        android:fontFamily="@font/space_mono_regular"
+        android:fontFamily="@font/roboto"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
@@ -77,7 +77,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         tools:text="AVERAGE"
-        android:fontFamily="@font/space_mono_regular"
+        android:fontFamily="@font/roboto"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_marginTop="40dp"
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:fontFamily="@font/space_mono_bold"
+        android:fontFamily="@font/roboto"
         tools:text="TITULO"
         android:textColor="@color/white"
         android:textSize="30sp"
@@ -108,7 +108,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:fontFamily="@font/space_mono_regular"
+        android:fontFamily="@font/roboto"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
