--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardView"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
+    android:layout_height="220dp"
+    android:layout_width="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="16dp"
     android:layout_margin="2dp"
@@ -10,19 +10,17 @@
 
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/tvTittle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/space_mono_bold"
+        android:layout_marginTop="200dp"
+        android:fontFamily="@font/roboto"
         android:text="Titulo"
+        android:visibility="gone"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
@@ -30,9 +28,10 @@
         android:id="@+id/tvRanking"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="95dp"
-        android:fontFamily="@font/space_mono_regular"
+        android:layout_marginTop="200dp"
+        android:layout_marginStart="12dp"
+        android:fontFamily="@font/roboto"
+        android:textStyle="bold"
         android:text="Valoracion"
         android:textColor="@color/white"
 
@@ -42,11 +41,11 @@
         android:id="@+id/tvYear"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="264dp"
         android:text="Año"
-        android:fontFamily="@font/space_mono_regular"
+        android:visibility="gone"
+        android:fontFamily="@font/roboto"
         android:textSize="14sp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"/> -->
 
 </androidx.cardview.widget.CardView>
