--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/popular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="POPULARES"
+                android:text="POPULAR"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -72,7 +72,7 @@
                 android:id="@+id/tvTopRated"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="MEJOR VALORADAS"
+                android:text="TOP RATED"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -91,6 +91,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="@id/tvUpcoming"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.157"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTopRated" />
@@ -99,7 +100,7 @@
                 android:id="@+id/tvUpcoming"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PROXIMAMENTE"
+                android:text="UPCOMING"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -116,15 +117,53 @@
                 android:layout_height="230dp"
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/tvTvPopular"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_weight="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvUpcoming" />
+
+
+            <TextView
+                android:id="@+id/tvTvPopular"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="POPULAR TV SERIES"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerView3" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView4"
+                android:layout_width="0dp"
+                android:layout_height="230dp"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvTvPopular" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.core.widget.NestedScrollView>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_menu"
+        style="@style/Widget.MaterialComponents.BottomNavigationView"/>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
