--- a/app/src/main/res/layout/view_pager_card_view.xml
+++ b/app/src/main/res/layout/view_pager_card_view.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/viewPagerCardView"
-    android:layout_height="300dp"
+    android:layout_height="220dp"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="16dp"
-    android:layout_margin="4dp"
     android:backgroundTint="@color/softBlueBlack">
 
     <ImageView
@@ -13,18 +11,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!-- <TextView
-        android:id="@+id/tvTittle"
+    <TextView
+        android:id="@+id/viewPagerTittle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="170dp"
         android:fontFamily="@font/roboto"
         android:text="Titulo"
-        android:visibility="gone"
+        android:textStyle="italic"
+        android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="18sp" />
+        android:textSize="24sp"
+        android:alpha="0.8"
+        android:background="@color/softBlueBlack"/>
 
     <TextView
+        android:id="@+id/viewPagerPoints"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:alpha="0.8"
+        android:layout_marginTop="195dp"
+        android:background="@color/softBlueBlack"
+        android:fontFamily="@font/roboto"
+        android:text="Points"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="italic"/>
+
+
+    <!--<TextView
         android:id="@+id/tvRanking"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
