--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,11 +5,11 @@
     android:id="@+id/searchFragment2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.MainActivity"
+    tools:context=".ui.view.search.SearchFragment"
     android:background="@color/softBlack">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header"
+        android:id="@+id/searchViewHeader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/searchView"
@@ -30,15 +30,19 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <SearchView
+    <EditText
         android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/header"
+        android:layout_height="48dp"
+        app:layout_constraintTop_toBottomOf="@id/searchViewHeader"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/list_item_container"
-        android:backgroundTint="@color/white"/>
+        android:queryBackground="@color/white"
+        android:background="@color/softBlueBlack"
+        android:searchHintIcon="@color/white"
+        android:queryHint="@string/search"
+        android:layout_margin="16dp"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,20 +61,20 @@
                 android:id="@+id/Searched"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/popular"
+                android:text="@string/Searched"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerViewSearch"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/recyclerViewSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
