--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="softBlueBlack">#263042</color>
     <color name="softBlack">#253B63</color>
+    <color name="softGray">#CEDDF8</color>
 </resources>
